sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^AlgInsertionSort:9: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^