sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int =0;
for (i <- 0 to getNombreValeurs())
{var lm : getValeur(i);
for(j<- i to 0 by -1)
{if( getValeur(j-1) > lm by -1)
{var lm : getValeur(i);
getValeur(j) = getValeur(j-1);
getValeur(j)= lm;}

}
}
}
